--- a/assets/styles/board.css
+++ b/assets/styles/board.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     box-shadow: 0px 0px 10px black;
     position: relative;
-    z-index: 0;
+    z-index: 1;
 }
 
 .cable {
